--- a/rey_de_copas/rey_de_copas/templates/mercaderias/promos_lista.html
+++ b/rey_de_copas/rey_de_copas/templates/mercaderias/promos_lista.html
@@ -30,7 +30,7 @@
                         </h3>
 
                         <h3 class="box-title">
-                            <a href="#" class="btn btn-info">Imprimir Codigos</a>
+                            <a href="{% url 'mercaderias:imprimir_codigos'%}" class="btn btn-info">Imprimir Codigos</a>
                         </h3>
                     <div class="box-tools pull-right">
                       <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
