--- a/rey_de_copas/rey_de_copas/templates/nav.html
+++ b/rey_de_copas/rey_de_copas/templates/nav.html
@@ -97,7 +97,8 @@
               </a>
               <ul class="treeview-menu">
                <!-- <li class="active"><a href="#"><i class="fa fa-check-square"></i> Lista</a></li> -->
-                 <li class="active"><a href="{% url 'ventas:cargar' %}"><i class="fa fa-check-square"></i> Cargar</a></li>
+                 <li class="active"><a href="{% url 'ventas:lista' %}"><i class="fa fa-check-square"></i> Lista </a></li>
+                 <li class="active"><a href="{% url 'ventas:cargar' %}"><i class="fa fa-plus"></i> Cargar</a></li>
                  <li class="active"><a href="{% url 'ventas:lista_precios' %}"><i class="fa fa-dollar"></i> Lista de Precios</a></li>
               </ul>
             </li>
