--- a/rey_de_copas/rey_de_copas/templates/ventas/lista_ventas.html
+++ b/rey_de_copas/rey_de_copas/templates/ventas/lista_ventas.html
@@ -47,6 +47,8 @@
                           <td>{{ venta.get_total }}</td>
                           <td class="text-right">
                                   <a href="{{ venta.get_absolute_url }}" class="btn btn-success"><span class="glyphicon glyphicon-eye-open"></span></a>
+
+                                  <a href="{{ venta.get_delete_url }}" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></a>
                           </td>
 
                         </tr>
