--- a/rey_de_copas/rey_de_copas/templates/stock/stock_lista.html
+++ b/rey_de_copas/rey_de_copas/templates/stock/stock_lista.html
@@ -115,8 +115,7 @@
 
             // Edicion boton descartar edicion
             $("#tabla-stock").on("click","div.btn-ed-volver" ,function(){
-                var btns_el = `<div class="btn btn-warning btn-editar"><span class="glyphicon glyphicon-pencil"></span></div>
-                               <div class="btn btn-danger btn-eliminar"><span class="glyphicon glyphicon-trash"></span></div>`;
+                var btns_el = '<div class="btn btn-warning btn-editar"><span class="glyphicon glyphicon-pencil"></span></div>';
                 var cantidad_col = $(this).parent().prev();
                 console.log($(this).parent().prev().html());
 
