Added permission check to add stock

--- a/rey_de_copas/rey_de_copas/templates/nav.html
+++ b/rey_de_copas/rey_de_copas/templates/nav.html
@@ -100,6 +100,9 @@
                  <li class="active"><a href="{% url 'ventas:lista' %}"><i class="fa fa-check-square"></i> Lista </a></li>
                  <li class="active"><a href="{% url 'ventas:cargar' %}"><i class="fa fa-plus"></i> Cargar</a></li>
                  <li class="active"><a href="{% url 'ventas:lista_precios' %}"><i class="fa fa-dollar"></i> Lista de Precios</a></li>
+                 {% if perms.ventas.view_detalledeventa %}
+                 <li class="active"><a href="#"><i class="fa fa-line-chart"></i> Ganancias </a></li>
+                 {% endif %}
               </ul>
             </li>
 
